--- a/src/alefba-src/src/stylesheets/sample-section.scss
+++ b/src/alefba-src/src/stylesheets/sample-section.scss
@@ -21,7 +21,7 @@ p {
 }
 
 .sample-title-space {
-    height: 6.6vw;
+    height: 5rem;
 }
 
 .sample-row {
@@ -84,6 +84,7 @@ p {
     font-weight: bold;
     font-size: 1.8vw;
     display: flex;
+    margin: 0;
     justify-content: center;
     align-items: center;
     font-family: iran-yekan, serif;
