--- a/src/alefba-src/src/stylesheets/technical-utils.scss
+++ b/src/alefba-src/src/stylesheets/technical-utils.scss
@@ -4,6 +4,7 @@
     font-weight: bold;
     font-size: 1.8vw;
     display: flex;
+    margin: 0;
     justify-content: center;
     align-items: center;
     font-family: iran-yekan, serif;
@@ -38,6 +39,7 @@
     justify-content: space-around;
     flex-direction: row;
     width: 70vw;
+    margin-top: #{'clamp(4.8rem, 10.5vw, 8.8rem)'};
     margin-right: 5vw;
 }
 
@@ -150,7 +152,6 @@
 
 .util-group {
     display: flex;
-    justify-content: center;
     align-items: flex-end;
     flex-direction: column;
     height: 33vh;
@@ -177,25 +178,25 @@
 }
 
 #right1-icon {
-    margin-top: -12vw;
-    margin-right: +9vw;
+    margin-top: -9.2vw;
+    margin-right: 9vw;
     width: 15.6vw;
 }
 
 #right2-icon {
-    margin-top: -10vw;
+    margin-top: -7.2vw;
     margin-right: -12vw;
     width: 13.2vw;
 }
 
 #left1-icon {
-    margin-top: -10vw;
+    margin-top: -7.2vw;
     margin-right: 10vw;
     width: 15.6vw;
 }
 
 #left2-icon {
-    margin-top: -10vw;
+    margin-top: -7.2vw;
     margin-right: -13vw;
     width: 15.6vw;
 }
@@ -224,15 +225,28 @@
     }
 
     #utils-wrapper {
+        margin-top: 0;
         align-items: center;
         flex-direction: column;
         width: 70vw;
     }
 
     .util-group {
-        margin-top: 30vh;
         height: 26.408450704225352vh;
         width: 77.77777777777779vw;
+    }
+
+    .util-group:nth-child(1) {
+        margin-top: #{'min(33vw, 120px)'};
+    }
+    .util-group:nth-child(2) {
+        margin-top: 42vw;
+    }
+    .util-group:nth-child(3) {
+        margin-top: 37vw;
+    }
+    .util-group:nth-child(4) {
+        margin-top: 55vw;
     }
 
     .black-util-text,
@@ -281,7 +295,7 @@
         height: 31.690140845070424vh;
         width: 44.44444444444444vw;
         margin-left: 47vw;
-        margin-top: -25vh;
+        margin-top: -17vh;
     }
 
     #nlp {
@@ -291,7 +305,7 @@
         height: 29vh;
         width: 40vw;
         margin-left: 50vw;
-        margin-top: -20vh;
+        margin-top: -15vh;
     }
 
     #accuracy {
@@ -301,7 +315,7 @@
         height: 29vh;
         width: 40vw;
         margin-right: 52vw;
-        margin-top: -20vh;
+        margin-top: -13vh;
     }
 
     #parallel {
@@ -311,6 +325,6 @@
         height: 29vh;
         width: 40vw;
         margin-right: 52vw;
-        margin-top: -25vh;
+        margin-top: -13vh;
     }
 }
