--- a/src/harf-src/src/stylesheets/usages-section.scss
+++ b/src/harf-src/src/stylesheets/usages-section.scss
@@ -154,6 +154,7 @@
     }
 
     .orange-text-usages {
+        margin-top: 1.5rem;
         font-size: 3.8vw;
     }
 
